--- a/public_html/css/style-main.css
+++ b/public_html/css/style-main.css
@@ -14,6 +14,9 @@ html, body, h1, h2, h3, h4, h5, h6, p, em, img, strong, sub, sup, b, u, i, dl, d
 html,body{
     height: 100%;
     width: 100%;
+    width: 100%;
+    width: 100%;
+    width: 100%;
 }
 
 body{
